@@ -139,6 +139,7 @@ unsigned char *v4l_start(struct context *cnt, struct video_dev *viddev, int widt
 	}
 
 	if (freq) {
+		memset(&vid_tuner, 0, sizeof(struct video_tuner));
 		vid_tuner.tuner = tuner_number;
 		if (ioctl (dev, VIDIOCGTUNER, &vid_tuner)==-1) {
 			motion_log(LOG_ERR, 1, "ioctl (VIDIOCGTUNER)");
@@ -329,6 +330,9 @@ void v4l_set_input(struct context *cnt, struct video_dev *viddev, unsigned char 
 	if (input != viddev->input || width != viddev->width || height!=viddev->height ||
 	    freq!=viddev->freq || tuner_number!=viddev->tuner_number) {
 		if (freq) {
+
+			memset(&vid_tuner, 0, sizeof(struct video_tuner));
+
 			vid_tuner.tuner = tuner_number;
 			if (ioctl (dev, VIDIOCGTUNER, &vid_tuner)==-1) {
 				motion_log(LOG_ERR, 1, "ioctl (VIDIOCGTUNER)");
@@ -345,6 +349,7 @@ void v4l_set_input(struct context *cnt, struct video_dev *viddev, unsigned char 
 			}
 		}
 
+		memset(&vid_chnl, 0, sizeof(struct video_channel));
 		vid_chnl.channel = input;
 		
 		if (ioctl (dev, VIDIOCGCHAN, &vid_chnl) == -1) {
